# SATySFi-quotation

./: README.md  Satyristes  satysfi-quotation-doc.opam  satysfi-quotation.opam
doc/: manual-ja.saty
src/: quotation.satyh
