opam-version: "2.0"
name: "satysfi-quotation-doc"
version: "0.1.0"
synopsis: "Document of satysfi-quotation"
description: """
Document of satysfi-quotation.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT" # Choose what you want
homepage: "https://github.com/puripuri2100/SATySFi-quotation"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-quotation.git"
bug-reports: "https://github.com/puripuri2100/SATySFi-quotation/issues"
depends: [
  "satysfi" { >= "0.0.4" & < "0.0.6" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-quotation" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-lipsum"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "quotation-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "quotation-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
