opam-version: "2.0"
name: "satysfi-quotation"
version: "0.1.0"
synopsis: "A SATySFi package of quoting"
description: """
A SATySFi package of quoting.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-quotation"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-quotation.git"
bug-reports: "https://github.com/puripuri2100/SATySFi-quotation/issues"
depends: [
  "satysfi" { >= "0.0.4" & < "0.0.6" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "quotation"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
